--- a/kotlin/leetcode/268.md
+++ b/kotlin/leetcode/268.md
@@ -23,6 +23,10 @@ class Solution {
 時間複雜度會是 O(n)
 
 ## Kotlin 參考解答
+
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+    
 利用以上思路解題如下
 
 ```kotlin
@@ -30,6 +34,8 @@ class Solution {
     fun missingNumber(nums: IntArray) = (nums.size * (nums.size + 1)) / 2 - nums.sum()  
 }
 ```
+
+</details>
 
 ------
 
