--- a/kotlin/leetcode/27.md
+++ b/kotlin/leetcode/27.md
@@ -15,6 +15,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 我們可以用 `forEach` 處理這題
 
 ```kotlin
@@ -30,6 +33,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
