--- a/kotlin/leetcode/2769.md
+++ b/kotlin/leetcode/2769.md
@@ -33,6 +33,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun theMaximumAchievableX(num: Int, t: Int) = num + t * 2 
@@ -46,6 +49,8 @@ class Solution {
     fun theMaximumAchievableX(num: Int, t: Int) = num + t + t
 }
 ```
+
+</details>
 
 ------
 
