--- a/kotlin/leetcode/278.md
+++ b/kotlin/leetcode/278.md
@@ -22,6 +22,9 @@ class Solution: VersionControl() {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution: VersionControl() {
     override fun firstBadVersion(n: Int) : Int {
@@ -40,6 +43,8 @@ class Solution: VersionControl() {
     }
 }
 ```
+
+</details>
 
 ------
 
