--- a/kotlin/leetcode/2798.md
+++ b/kotlin/leetcode/2798.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 利用 Kotlin Collection 的 `count`
 
 我們可以這樣寫
@@ -31,6 +34,8 @@ class Solution {
     fun numberOfEmployeesWhoMetTarget(hours: IntArray, target: Int) = hours.count { it >= target }
 }
 ```
+
+</details>
 
 ------
 
