--- a/kotlin/leetcode/28.md
+++ b/kotlin/leetcode/28.md
@@ -18,7 +18,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 使用基礎操作完成 `strStr`
 
