--- a/kotlin/leetcode/2894.md
+++ b/kotlin/leetcode/2894.md
@@ -24,6 +24,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 依照題目使用 `num1` `num2` 進行回答
 
 ```kotlin
@@ -43,6 +46,8 @@ class Solution {
     fun differenceOfSums(n: Int, m: Int) = (1..n).fold(0){acc, num -> if (num % m == 0) acc - num else acc + num}
 }
 ```
+
+</details>
 
 ------
 
