--- a/kotlin/leetcode/2942.md
+++ b/kotlin/leetcode/2942.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun findWordsContaining(words: Array<String>, x: Char): List<Int> = (0 until words.size)
@@ -35,6 +38,8 @@ class Solution {
         .filter { x in words[it] }
 }
 ```
+
+</details>
 
 ------
 
