--- a/kotlin/leetcode/3110.md
+++ b/kotlin/leetcode/3110.md
@@ -21,7 +21,7 @@ class Solution {
 
 ## Kotlin 參考解答
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
@@ -30,6 +30,8 @@ class Solution {
 ```
 
 </details>
+
+
 ------
 
 - 回到 [leetcode 列表](index.md)
