--- a/kotlin/leetcode/3190.md
+++ b/kotlin/leetcode/3190.md
@@ -22,7 +22,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 傳統使用 for loop 的寫法
 
