--- a/kotlin/leetcode/3280.md
+++ b/kotlin/leetcode/3280.md
@@ -21,8 +21,9 @@ class Solution {
 最後用 `joinToString()` 合併為一個字串
 
 ## Kotlin 參考解答
+
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
