--- a/kotlin/leetcode/344.md
+++ b/kotlin/leetcode/344.md
@@ -23,7 +23,7 @@ a = b.also {b = a}
 
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
