--- a/kotlin/leetcode/35.md
+++ b/kotlin/leetcode/35.md
@@ -15,6 +15,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 我們可以用 `forEachIndexed` 處理這題
 
 ```kotlin
@@ -29,6 +32,8 @@ class Solution {
      }  
 }
 ```
+
+</details>
 
 ------
 
