--- a/kotlin/leetcode/371.md
+++ b/kotlin/leetcode/371.md
@@ -33,6 +33,11 @@ a + b = (a and b) shl 1 + (a xor b)
 |1|1|1|0|10|
 
 ## Kotlin 參考解答
+
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
+
 搭配 kotlin 的 bitwise operation
 
 實作的方式如下
@@ -52,6 +57,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
