--- a/kotlin/leetcode/383.md
+++ b/kotlin/leetcode/383.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun canConstruct(r: String, m: String) = IntArray(26).apply {
@@ -30,6 +33,8 @@ class Solution {
     }.isNotEmpty()
 }
 ```
+
+</details>
 
 ------
 
