--- a/kotlin/leetcode/404.md
+++ b/kotlin/leetcode/404.md
@@ -18,7 +18,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 一樣可以寫成單個表達式
 
