--- a/kotlin/leetcode/485.md
+++ b/kotlin/leetcode/485.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 用 `forEach` 可以這樣寫
 
 ```kotlin
@@ -59,6 +62,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
