--- a/kotlin/leetcode/500.md
+++ b/kotlin/leetcode/500.md
@@ -24,6 +24,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun findWords(words: Array<String>): Array<String> {
@@ -108,6 +111,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
