--- a/kotlin/leetcode/520.md
+++ b/kotlin/leetcode/520.md
@@ -26,6 +26,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun detectCapitalUse(word: String): Boolean {
@@ -37,6 +40,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
