--- a/kotlin/leetcode/53.md
+++ b/kotlin/leetcode/53.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 利用一個陣列紀錄之前累積答案的作法如下
 
 ```kotlin
@@ -34,6 +37,8 @@ class Solution {
     }  
 }
 ```
+
+</details>
 
 ------
 
