--- a/kotlin/leetcode/535.md
+++ b/kotlin/leetcode/535.md
@@ -31,6 +31,9 @@ class Codec() {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Codec() {
     private val map = mutableMapOf<String, String>()
@@ -48,6 +51,8 @@ class Codec() {
     }
 }
 ```
+
+</details>
 
 ------
 
