--- a/kotlin/leetcode/543.md
+++ b/kotlin/leetcode/543.md
@@ -36,7 +36,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
   
 可以使用尾遞迴的方式撰寫
 
