--- a/kotlin/leetcode/572.md
+++ b/kotlin/leetcode/572.md
@@ -18,6 +18,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun isSubtree(root: TreeNode?, subRoot: TreeNode?): Boolean {
@@ -61,6 +64,9 @@ class Solution {
     }
 }
 ```
+
+</details>
+
 ------
 
 回到 [leetcode 列表](index.md)
