--- a/kotlin/leetcode/58.md
+++ b/kotlin/leetcode/58.md
@@ -22,7 +22,8 @@ class Solution {
 
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
+  
 
 我第一時間想到的是 Regex 解法
 
