--- a/kotlin/leetcode/617.md
+++ b/kotlin/leetcode/617.md
@@ -35,7 +35,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 搭配 scope function 和 `when` 
 
