--- a/kotlin/leetcode/69.md
+++ b/kotlin/leetcode/69.md
@@ -16,7 +16,7 @@ class Solution {
 ## Kotlin 參考解答
 
 <details>
-  <summary>點擊展開解答</summary>
+  <summary markdown='span'>點擊展開解答</summary>
 
 ```kotlin
 class Solution {
