--- a/kotlin/leetcode/70.md
+++ b/kotlin/leetcode/70.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 根據遞迴的想法，我們可以想到以下解法
 
 ```kotlin
@@ -82,6 +85,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
