--- a/kotlin/leetcode/804.md
+++ b/kotlin/leetcode/804.md
@@ -20,6 +20,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun uniqueMorseRepresentations(words: Array<String>): Int {
@@ -57,6 +60,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
