--- a/kotlin/leetcode/83.md
+++ b/kotlin/leetcode/83.md
@@ -19,6 +19,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun deleteDuplicates(head: ListNode?): ListNode? {
@@ -34,6 +37,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
