--- a/kotlin/leetcode/832.md
+++ b/kotlin/leetcode/832.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 `forEach` 的寫法如下
 
 ```kotlin
@@ -43,6 +46,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
