--- a/kotlin/leetcode/876.md
+++ b/kotlin/leetcode/876.md
@@ -28,6 +28,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 /**
  * Example:
@@ -50,6 +53,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
