--- a/kotlin/leetcode/88.md
+++ b/kotlin/leetcode/88.md
@@ -22,6 +22,9 @@ class Solution {
 
 ## Kotlin 參考解答
 
+<details>
+  <summary markdown='span'>點擊展開解答</summary>
+
 ```kotlin
 class Solution {
     fun merge(nums1: IntArray, m: Int, nums2: IntArray, n: Int) {
@@ -32,6 +35,8 @@ class Solution {
     }
 }
 ```
+
+</details>
 
 ------
 
